src/components/button/ButtonCta.module.scss
@import '../../utils/map-deep-get.scss';
@import '../../design-tokens/colors.scss';
@import '../../design-tokens/media.scss';
@import '../../design-tokens/typography.scss';

.fdButtonCta {
    opacity: 0;
    animation: show;
    animation-duration: 0.3s;
    animation-fill-mode: forwards;
    user-select: none;
    box-sizing: border-box;
    position: relative;
    overflow: hidden;
    min-height: 2rem;
    display: flex;
    align-items: center;
    justify-content: center;
    vertical-align: middle;
    font-size: 0.875rem;
    line-height: 1.25;
    color: var(--button-cta-text);
    // IE11
    @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
        opacity: 1; // Remove this line for fd.nl
        color: #{map-deep-get($colors, 'colors', 'neutral', 100)};
    }
    text-decoration: none;
    cursor: pointer;
    padding: 0 1rem;
    border: none;
    text-align: center;
    background-position: center;
    transition: transform 0.05s ease-out, background-color 0.1s;
    border-radius: 0;
    font-family: map-deep-get($typography, 'font-family', 'bold'), sans-serif;
    font-weight: normal;
    letter-spacing: -0.1px;
    @media screen and (max-width: map-deep-get($media, 'sizes', 'xs')) {
        width: 100%;
    }

    > * {
        display: flex;
    }

    background-color: var(--button-cta);
    &:hover {
        background-color: var(--button-cta-hover);
    }
    // IE11
    @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
        background-color: #{map-deep-get($colors, 'colors', 'secondary', 75)};
        &:hover {
            background-color: #{map-deep-get($colors, 'colors', 'secondary', 50)};
        }
    }

    @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
        height: 100%;
        min-height: 32px;
        max-height: 32px;
    }
    &.m {
        font-size: 1rem;
        min-height: 3rem;
        @media screen and (-ms-high-contrast: active),
            (-ms-high-contrast: none) {
            height: 100%;
            min-height: 48px;
            max-height: 48px;
        }
    }

    @media screen and (min-width: map-deep-get($media, 'sizes', 's')) {
        &:active {
            transform: scale(0.95);
            &.m {
                transform: scale(0.98);
            }
        }
    }

    &:focus {
        outline: 1.5px solid var(--button-cta-outline);
        outline-offset: -1.5px;
        // IE11
        @media screen and (-ms-high-contrast: active),
            (-ms-high-contrast: none) {
            outline: 1.5px solid #{map-deep-get(
                    $colors,
                    'colors',
                    'primary',
                    75
                )};
        }
    }
    &:active {
        outline: none;
    }

    &:before {
        position: absolute;
        margin: 0 auto;
        transform: skewX(15deg);
        background-color: white;
        width: 0;
        height: 100%;
        @media screen and (-ms-high-contrast: active),
            (-ms-high-contrast: none) {
            left: -30%;
            top: 0;
        }
    }

    &:focus {
        background-color: var(--button-cta-focus);
        // IE11
        @media screen and (-ms-high-contrast: active),
            (-ms-high-contrast: none) {
            background-color: #{map-deep-get(
                    $colors,
                    'colors',
                    'secondary',
                    100
                )};
        }
    }

    /**
     * Trick to play animation after click happened
     */
    &:not(:active) {
        &:before {
            content: '';
            animation: ripple;
            animation-duration: 0.5s;
        }
    }

    &:active {
        &:before {
            content: '';
            animation: rippleReverse;
            animation-duration: 0.5s;
            animation-delay: 0.1s;
        }
        background-color: var(--button-cta-active);
        // IE11
        @media screen and (-ms-high-contrast: active),
            (-ms-high-contrast: none) {
            background-color: #{map-deep-get(
                    $colors,
                    'colors',
                    'secondary',
                    100
                )};
        }

        @media screen and (max-width: map-deep-get($media, 'sizes', 'xs')) {
            transform: scale(0.98);
        }
    }

    &:hover {
        background-color: var(--button-cta-hover);
        // IE11
        @media screen and (-ms-high-contrast: active),
            (-ms-high-contrast: none) {
            background-color: #{map-deep-get($colors, 'colors', 'secondary', 50)};
        }

        &:active {
            background-color: var(--button-cta-active);
            // IE11
            @media screen and (-ms-high-contrast: active),
                (-ms-high-contrast: none) {
                background-color: #{map-deep-get(
                        $colors,
                        'colors',
                        'secondary',
                        100
                    )};
            }
        }
    }

    &:disabled,
    &:disabled:active {
        outline: none;
        background-color: var(--button-cta-disabled);
        // IE11
        @media screen and (-ms-high-contrast: active),
            (-ms-high-contrast: none) {
            background-color: #{map-deep-get($colors, 'colors', 'secondary', 25)};
        }
        transform: scale(1);
        * {
            pointer-events: none;
        }
    }

    svg {
        fill: var(--button-cta-text);
        // IE11
        @media screen and (-ms-high-contrast: active),
            (-ms-high-contrast: none) {
            fill: #{map-deep-get($colors, 'colors', 'neutral', 100)};
        }

        width: 1rem;
        height: 1rem;
        margin: 0 0.5rem;
    }

    @keyframes ripple {
        0% {
            width: 0%;
            opacity: 0.2;
        }
        50% {
            opacity: 0.2;
        }
        100% {
            width: 130%;
            opacity: 0;
        }
    }

    @keyframes rippleReverse {
        0% {
            width: 130%;
            opacity: 0.2;
        }
        100% {
            width: 0%;
            opacity: 0.2;
        }
    }

    @keyframes show {
        0% {
            opacity: 0;
        }
        99% {
            opacity: 0;
        }
        100% {
            opacity: 1;
        }
    }
}

